<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<artifactId>os2faktor-nsis-idp</artifactId>
	<name>OS2faktor NSIS IdP</name>
	<packaging>jar</packaging>
	<parent>
		<groupId>dk.digitalidentity.os2faktor</groupId>
		<artifactId>os2faktor-nsis-parent</artifactId>
		<version>1.0.0</version>
	</parent>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>25</java.version>
	</properties>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<layout>ZIP</layout>
					<addResources>
						true
					</addResources>
					<additionalClasspathElements>
						<additionalClasspathElement>${basedir}/config</additionalClasspathElement>
					</additionalClasspathElements>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-eclipse-plugin</artifactId>
				<version>2.9</version>
				<configuration>
					<downloadSources>true</downloadSources>
					<downloadJavadocs>true</downloadJavadocs>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>25</source>
					<target>25</target>
					<annotationProcessorPaths>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</path>
					</annotationProcessorPaths>
				</configuration>
			</plugin>

		</plugins>

		<finalName>os2faktor-nsis-idp</finalName>
	</build>

	<dependencies>
		<!-- need to be at the top to ensure dependency upgrades to OpenSAML -->
		<dependency>
			<groupId>dk.digitalidentity</groupId>
			<artifactId>saml-module</artifactId>
			<version>os2faktor-4.0.3</version>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-thymeleaf</artifactId>
		</dependency>

		<dependency>
			<groupId>org.thymeleaf.extras</groupId>
			<artifactId>thymeleaf-extras-springsecurity6</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.session</groupId>
			<artifactId>spring-session-jdbc</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-flyway</artifactId>
		</dependency>

		<dependency>
			<groupId>org.flywaydb</groupId>
			<artifactId>flyway-mysql</artifactId>
		</dependency>

		<dependency>
			<groupId>org.tinyradius</groupId>
			<artifactId>os2faktor-nsis-tinyradius</artifactId>
			<version>1.1.1</version>
		</dependency>

		<dependency>
			<groupId>dk.digitalidentity.os2faktor</groupId>
			<artifactId>os2faktor-nsis-common</artifactId>
			<version>1.0.0</version>
		</dependency>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
		</dependency>

		<!-- WS-Trust dependencies (these should *probably* be kept at similar version numbers)	-->
		<dependency>
			<groupId>org.apache.wss4j</groupId>
			<artifactId>wss4j-ws-security-dom</artifactId>
			<version>2.4.2</version>
			<exclusions>
				<exclusion>
					<groupId>org.ehcache</groupId>
					<artifactId>ehcache</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<!-- TODO: very old, why do we keep this one around? -->
		<dependency>
			<groupId>com.sun.xml.messaging.saaj</groupId>
			<artifactId>saaj-impl</artifactId>
			<version>1.5.3</version>
		</dependency>

		<dependency>
			<groupId>org.apache.santuario</groupId>
			<artifactId>xmlsec</artifactId>
			<version>3.0.3</version>
		</dependency>
		<!--	End WS-Trust dependencies	-->

		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-oauth2-authorization-server</artifactId>
		</dependency>

		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt-impl</artifactId>
			<version>0.12.6</version>
		</dependency>

		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt-jackson</artifactId>
			<version>0.12.6</version>
		</dependency>

		<dependency>
			<groupId>org.bouncycastle</groupId>
			<artifactId>bcpkix-jdk15on</artifactId>
			<version>1.68</version>
		</dependency>

		<!-- makes Spring boot faster by creating an index of beans at compile time -->
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context-indexer</artifactId>
			<optional>true</optional>
		</dependency>
	</dependencies>

	<repositories>
		<repository>
			<id>1-maven-repository</id>
			<name>Maven Repository</name>
			<url>https://repo.maven.apache.org/maven2/</url>
		</repository>

		<repository>
			<id>2-shared-resources</id>
			<name>Shared Resources</name>
			<url>https://mvn.digital-identity.dk/release</url>
		</repository>
	</repositories>
</project>
